Initial construction of boxes in content services

--- a/first project/index.html
+++ b/first project/index.html
@@ -40,17 +40,17 @@
 
             <div class="services-content">
                 <div class="box">
-                    <i class="fa-cloud  "></i>
+                    <i class="fa-cloud icon color-blue big"></i>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam unde corporis, doloremque quas esse et!</p>
                 </div>
                 <div class="box">
-                    <i class=""></i>
+                    <i class="fa-desktop icon color-green big"></i>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam unde corporis, doloremque quas esse et!</p>
                 </div>
                 <div class="box">
-                    <i class=""></i>
+                    <i class="fa-rocket icon color-red big"></i>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam unde corporis, doloremque quas esse et!</p>
                 </div>
