Completing the main class section

--- a/first project/index.html
+++ b/first project/index.html
@@ -57,13 +57,48 @@
             </div>
         </div>
 
-        <div class="about"></div>
-        <div class="contacts"></div>
+        <div class="about">
+            <div class="container">
+                <div class="about-header">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus.</p>
+                </div>
+                <div class="about-content">
+                    <div class="profile">
+                        <img src="img/profile_placeholder.gif"  alt="hii">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="profile">
+                        <img src="img/profile_placeholder.gif"  alt="hii">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="profile">
+                        <img src="img/profile_placeholder.gif"  alt="hii">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="profile">
+                        <img src="img/profile_placeholder.gif"  alt="hii">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="about-footer">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis voluptatibus illo corporis quos rem in quam laudantium eius molestias tempore. Porro, corporis obcaecati quisquam quo perspiciatis aut magni repellat non.</p>
+                    <button class="btn btn-big btn-blue">Lorem, ipsum dolor.</button>
+                </div>
+            </div>
+        </div>
+        <div class="contacts">
+            <div class="contact-header">
+                <h2>Lorem ipsum dolor sit amet.</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod.</p>
+            </div>
+            <div class="contact-content"></div>
+        </div>
     </div>
-
-
-
-
 
 
     <div class="footer"></div>
