--- a/first project/index.html
+++ b/first project/index.html
@@ -96,11 +96,16 @@
                 <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod.</p>
             </div>
-            <div class="contact-content"></div>
+            <div class="contact-content">
+                <form action="#">
+                    <input type="text" placeholder="Name" > 
+                    <input type="email" placeholder="Email" >
+                    <textarea placeholder="Message"></textarea>
+                </form>
+                <button class="btn btn-dark btn-big">Send Message</button>
+            </div>
         </div>
     </div>
-
-
     <div class="footer"></div>
      
 
