--- a/first project/index.html
+++ b/first project/index.html
@@ -106,7 +106,13 @@
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <ul class="copyright">
+            <li> Lorem ipsum dolor sit.</li>
+            <li>Design: <a href="#"> TEMPLATED </a></li>
+            <li>Lorem, ipsum.</li>
+        </ul>
+    </div>
      
 
 </body>
