--- a/second-project/index.html
+++ b/second-project/index.html
@@ -77,7 +77,7 @@
                 </section>
 
                 <section class="clear-fix"></section>
-                
+
                 <section class="intro-row intro-h-1-3">
                     <section class=" intro-1-3-col-item positon-relative intro-h-100 h-md-300px">
                         <section class="img-bg bg-4 intro-h-100"></section>
@@ -127,6 +127,36 @@
                 </section>
                 <section class="clear-fix"></section>
             </section>
+
+            <section class="container">
+                <main>
+                    <section class="main-news">
+                        <h2 class="title">
+                            RECENT NEWS
+                        </h2>
+                        <article>
+                            <img src="images/recent-news-1-600x450.jpg" alt="">
+                            <h3>
+                                <a href="#">
+                                    2017 Market Performance Crypto vs.Stock
+                                </a>
+                                <ul>
+                                    <li> by <b class="text-yellow"> Olivia Capzallo </b> Jan 25, 2018 </li>
+                                    <li><i class="fas fa-bolt text-yellow"></i> 30,190 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 30 </li>
+                                </ul>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis minus dolor est voluptatibus accusamus, voluptas consequuntur explicabo quibusdam, delectus, earum architecto doloremque quis. Ipsum dolorum quam voluptatibus id dolor esse?</p>
+                                
+                            </h3>
+                        </article>
+                    </section>
+                </main>
+                <aside></aside>
+            </section>
+
+
+
+
         </section>
     </section>
     <footer></footer>
