--- a/second-project/index.html
+++ b/second-project/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +28,7 @@
         <section class="content">
             <section class="intro-h-600px">
                 <section class="intro-row intro-h-2-3 mb-10x">
-                    <section class="intro-2-3-col intro-row-h-100 positon-relative h-md-300px">
+                    <section class="intro-2-3-col intro-h-100 positon-relative h-md-300px">
                         <section class="img-bg bg-1 intro-h-100 "></section>
                         <section class="intro-item-caption ">
                             <h3 class="caption-title ">
@@ -42,7 +44,7 @@
                         </section>
                     </section>
                     <section class="intro-1-3-col intro-h-100">
-                        <section class="intro-1-3-item intro-h-50 positon-relative h-md-300px" >
+                        <section class="intro-1-3-item h-md-300px intro-h-50 positon-relative h-md-300px" >
                             <section class="img-bg bg-2 intro-h-100" ></section>
                             <section class="intro-item-caption ">
                                 <h3 class="caption-title">
@@ -58,7 +60,7 @@
                             </section>
 
                         </section>
-                        <section class="intro-1-3-item intro-h-50 positon-relative h-md-300px">
+                        <section class="intro-1-3-item h-md-300px intro-h-50 positon-relative h-md-300px">
                             <section class="img-bg bg-3 intro-h-100"></section>
                             <section class="intro-item-caption ">
                                 <h3 class="caption-title">
@@ -79,7 +81,7 @@
                 <section class="clear-fix"></section>
 
                 <section class="intro-row intro-h-1-3">
-                    <section class=" intro-1-3-col-item positon-relative intro-h-100 h-md-300px">
+                    <section class=" intro-1-3-col-item h-md-300px positon-relative intro-h-100 h-md-300px">
                         <section class="img-bg bg-4 intro-h-100"></section>
                         <section class="intro-item-caption ">
                             <h3 class="caption-title">
@@ -94,7 +96,7 @@
                             </ul>
                         </section>
                     </section>
-                    <section class=" intro-1-3-col-item positon-relative intro-h-100 h-md-300px">
+                    <section class=" intro-1-3-col-item h-md-300px positon-relative intro-h-100 h-md-300px">
                         <section class="img-bg bg-5 intro-h-100"></section>
                         <section class="intro-item-caption">
                             <h3 class="caption-title">
@@ -109,7 +111,7 @@
                             </ul>
                         </section>
                     </section>
-                    <section class=" intro-1-3-col-item positon-relative intro-h-100 h-md-300px">
+                    <section class=" intro-1-3-col-item h-md-300px positon-relative intro-h-100 h-md-300px">
                         <section class="img-bg bg-6 intro-h-100"></section>
                         <section class="intro-item-caption">
                             <h3 class="caption-title">
@@ -127,23 +129,24 @@
                 </section>
                 <section class="clear-fix"></section>
             </section>
+            <section class="clear-fix"></section>
 
             <section class="container">
-                <main>
+                <main class="main">
                     <section class="main-news">
                         <h2 class="title">
                             RECENT NEWS
                         </h2>
                         <article>
-                            <img src="images/recent-news-1-600x450.jpg" alt="">
-                            <h3>
+                            <img class="main-news-img" src="images/recent-news-1-600x450.jpg" alt="">
+                            <h3 class="article-title">
                                 <a href="#">
                                     2017 Market Performance Crypto vs.Stock
                                 </a>
-                                <ul>
-                                    <li> by <b class="text-yellow"> Olivia Capzallo </b> Jan 25, 2018 </li>
+                                <ul class="info-bar"> 
+                                    <li> <snap class="text-muted"> by </snap> <b class="text-yellow"> Olivia Capzallo </b> Jan 25, 2018 </li>
                                     <li><i class="fas fa-bolt text-yellow"></i> 30,190 </li>
-                                    <li><i class="fas fa-comments text-yellow"></i> 30 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 47 </li>
                                 </ul>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis minus dolor est voluptatibus accusamus, voluptas consequuntur explicabo quibusdam, delectus, earum architecto doloremque quis. Ipsum dolorum quam voluptatibus id dolor esse?</p>
                                 
@@ -153,10 +156,6 @@
                 </main>
                 <aside></aside>
             </section>
-
-
-
-
         </section>
     </section>
     <footer></footer>
@@ -176,4 +175,4 @@
         }
     </script>
 </body>
-</html>
+</html> 
