--- a/second-project/index.html
+++ b/second-project/index.html
@@ -153,8 +153,56 @@
                             </h3>
                         </article>
                     </section>
+                    <section class="main-crypto-maining-news">
+                        <h2 class="title">
+                            CRYPTO MINING NEWS
+                        </h2>
+                        <section class="main-news-w-50">
+                            <article>
+                                <img src="/images/crypto-news-2-600x450.jpg" class="main-news-img" alt="">
+                                <h3>
+                                    <a href="#">
+                                        2017 Market Performance Crypto  vs.Stock
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li> <snap class="text-muted"> by </snap> <b class="text-yellow"> Olivia Capzallo </b> Jan 25, 2018 </li>
+                                    <li><i class="fas fa-bolt text-yellow"></i> 30,190 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 47 </li>
+                                </ul>                                
+                            </article>
+                        </section>
+                        <section class="main-news-w-50">
+                            <article>
+                                <img src="/images/crypto-news-1-600x450.jpg" class="main-news-img" alt="">
+                                <h3>
+                                    <a href="#">
+                                        2017 Market Performance Crypto  vs.Stock
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li> <snap class="text-muted"> by </snap> <b class="text-yellow"> Olivia Capzallo </b> Jan 25, 2018 </li>
+                                    <li><i class="fas fa-bolt text-yellow"></i> 30,190 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 47 </li>
+                                </ul>                                
+                            </article>
+                        </section>
+                    </section>
                 </main>
-                <aside></aside>
+                <aside class="sidebar">
+                    <section class="sidebar-item">
+                        <ul class="sidebar-list">
+                            <li class="sidebar-list-item"><b>1 BTC = $13,2323 </b></li>
+                            <li class="sidebar-list-item"><b>1 BTC = $13,2323 </b></li>
+                            <li class="sidebar-list-item"><b>1 BTC = $13,2323 </b></li>
+                            <li class="sidebar-list-item"><b>1 BTC = $13,2323 </b></li>
+                            <li class="sidebar-list-item"><b>1 BTC = $13,2323 </b></li>
+                            <li class="sidebar-list-item"><b>1 BTC = $13,2323 </b></li>
+                        </ul>
+                    </section>
+                    <section></section>
+                    <section></section>
+                </aside>
             </section>
         </section>
     </section>
