in the sidebar section Completing the popular post sectionِِ

--- a/second-project/index.html
+++ b/second-project/index.html
@@ -200,7 +200,75 @@
                             <li class="sidebar-list-item"><b>1 BTC = $13,2323 </b></li>
                         </ul>
                     </section>
-                    <section></section>
+                    <section class="sidebar-item">
+                        <h2 class="title">
+                            POPULAR POSTS 
+                        </h2>
+                        <section class="popular-post">
+                            <img src="/images/polular-1-100x100.jpg" class="popular-post-img" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        Bitcoin Billionares Hidding in plain Sight
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>by <b> Olivia Capzallo,</b> jan 25, 2018</li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 30, 190 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 47 </li>
+                                </ul>
+                            </section>
+                            <section class="clear-fix"></section>
+                        </section>
+                        <section class="popular-post">
+                            <img src="/images/polular-2-100x100.jpg" class="popular-post-img" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        Bitcoin Billionares Hidding in plain Sight
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>by <b> Olivia Capzallo,</b> jan 25, 2018</li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 30, 190 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 47 </li>
+                                </ul>
+                            </section>
+                            <section class="clear-fix"></section>
+                        </section>
+                        <section class="popular-post">
+                            <img src="/images/polular-3-100x100.jpg" class="popular-post-img" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        Bitcoin Billionares Hidding in plain Sight
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>by <b> Olivia Capzallo,</b> jan 25, 2018</li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 30, 190 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 47 </li>
+                                </ul>
+                            </section>
+                            <section class="clear-fix"></section>
+                        </section>
+                        <section class="popular-post">
+                            <img src="/images/polular-4-100x100.jpg" class="popular-post-img" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        Bitcoin Billionares Hidding in plain Sight
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>by <b> Olivia Capzallo,</b> jan 25, 2018</li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 30, 190 </li>
+                                    <li><i class="fas fa-comments text-yellow"></i> 47 </li>
+                                </ul>
+                            </section>
+                            <section class="clear-fix"></section>
+                        </section>
+                    </section>
                     <section></section>
                 </aside>
             </section>
