Completing the continent, completing the app section

--- a/second-project/index.html
+++ b/second-project/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -129,6 +127,7 @@
                 </section>
                 <section class="clear-fix"></section>
             </section>
+
             <section class="clear-fix"></section>
 
             <section class="container">
@@ -269,8 +268,19 @@
                             <section class="clear-fix"></section>
                         </section>
                     </section>
-                    <section></section>
+                    <section class="sidebar-item">
+                        <h2 class="title">
+                            NEWSLETTER
+                        </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eum optio officia accusantium.</p>
+                        <form action="#" class="subscript-from">
+                            <input type="text" class="subscript-from-text"  placeholder="Your Email">
+                            <button class="btn">b</button>
+                        </form>
+                    </section>
+                    <section class="clear-fix"></section>
                 </aside>
+                <section class="clear-fix"></section>
             </section>
         </section>
     </section>
