Completing the responsiveness of the container section

--- a/second-project/index.html
+++ b/second-project/index.html
@@ -284,7 +284,9 @@
             </section>
         </section>
     </section>
-    <footer></footer>
+    <footer>
+
+    </footer>
     <script>
         function showMenu(){
             var menu = document.getElementById("menu");
