Completing the footer section and complete the entire project

--- a/second-project/index.html
+++ b/second-project/index.html
@@ -284,7 +284,78 @@
             </section>
         </section>
     </section>
-    <footer>
+    <footer class="footer">
+
+        <section class="app bg-map">
+
+            <section class="footer-row">
+                <section class="footer-col">
+                    <img src="/images/logo-white.png" alt="footer logo" class="footer-logo">
+                    <section class="clear-fix"></section>
+
+                    <p class="footer-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptates sequi illo dolorum eum dolor sit placeat repellendus iste quae.</p>
+
+                    <p class="footer-p footer-p-padding-20px">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet at recusandae?</p>
+
+                </section>
+                <section class="footer-col">
+                    <h3 class="footer-section-title text-yellow"> MOST POPULAR </h3>
+                    <section class="footer-section-link-item">
+                        <a href="#"> Its Make or Break Time for Bitcoin </a>
+                        <p> Jan 25, 2018 </p>
+                    </section>
+                    
+                    <section class="footer-line"></section>
+
+                    <section class="footer-section-link-item">
+                        <a href="#"> Its Make or Break Time for Bitcoin </a>
+                        <p> Jan 25, 2018 </p>
+                    </section>
+
+                </section>
+                <section class="footer-col">
+
+                    <h3 class="footer-section-title text-yellow"> MOST POPULAR </h3>
+                    <section class="footer-section-link-item">
+                        <a href="#"> Its Make or Break Time for Bitcoin </a>
+                        <p> Jan 25, 2018 </p>
+                    </section>
+                    
+                    <section class="footer-line"></section>
+
+                    <section class="footer-section-link-item">
+                        <a href="#"> Its Make or Break Time for Bitcoin </a>
+                        <p> Jan 25, 2018 </p>
+                    </section>
+
+                </section>
+                <section class="clear-fix"></section>
+
+            </section>
+
+
+
+            <section class="footer-line"></section>
+
+            <section class="footer-row">
+                <ul class="footer-menu">
+                    <li><a href="#">  Terms & Conditions </a></li>
+                    <li><a href="#">  Privacy Policy  </a></li>
+                    <li><a href="#">  Jobs advertising </a></li>
+                    <li><a href="#">  Contact us </a></li>
+                </ul>
+
+                <ul class="footer-social-network">
+                    <li><a href="#"><i class="fab  hover-blue fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab hover-blue fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab hover-red fa-google-plus"></i></a></li>
+                    <li><a href="#"><i class="fab hover-yellow fa-bitcoin"></i></a></li>
+                </ul>
+                <section class="clear-fix"></section>
+            </section>
+
+        </section>
+        <section class="clear-fix"></section>
 
     </footer>
     <script>
