--- a/project-flex-box/index.html
+++ b/project-flex-box/index.html
@@ -33,7 +33,26 @@
         </div>
     </div>
 
-
+    <div class="photo-grid-container">
+        <div class="photo-grid">
+            <div class="photo-grid-item">
+                <img src="/images/one.svg" alt="">
+            </div>
+            <div class="photo-grid-item">
+                <img src="/images/two.svg" alt="">
+            </div>
+            <div class="photo-grid-item">
+                <img src="/images/three.svg" alt="">
+            </div>
+            <div class="photo-grid-item">
+                <img src="/images/four.svg" alt="">
+            </div>
+            <div class="photo-grid-item">
+                <img src="/images/five.svg" alt="">
+            </div>
+            
+        </div>
+    </div>
 
 
 
