--- a/project-flex-box/index.html
+++ b/project-flex-box/index.html
@@ -54,6 +54,23 @@
         </div>
     </div>
 
+    <div class="footer">
+        <div class="footer-item footer-one">
+            <div class="footer-social">
+                <img src="images/social-icons.svg" alt="">
+            </div>
+        </div>
+        <div class="footer-item footer-two"></div>
+        <div class="footer-item footer-three">
+            <ul class="footer-menu">
+                <li class="footer-menu-item"> Home </li>
+                <li class="footer-menu-item"> About </li>
+                <li class="footer-menu-item"> Sevices </li>
+                <li class="footer-menu-item"> Contact </li>
+            </ul>
+        </div>
+    </div>
+
 
 
 </body>
