--- a/To-DoProject/index.html
+++ b/To-DoProject/index.html
@@ -11,7 +11,7 @@
         <h2>To-Do List <img src="/images/icon.png" /></h2>
         <div class="row">
             <input type="text" id="input-bot" placeholder="Add your text">
-            <button> Add </button>
+            <button onclick="addTask()"> Add </button>
         </div>
         <ul id="list-container">
             <!-- <li class="checked">Task 1</li>
