The initial style was created

--- a/ImageSearchEngine/index.html
+++ b/ImageSearchEngine/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>image search engine</h1>
+    <form action="#" id="search-from">
+
+        <input type="text" id="srearch-box" placeholder="Search anything here...">
+        <button> Search </button>
+
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
