fix style and html

--- a/ImageSearchEngine/index.html
+++ b/ImageSearchEngine/index.html
@@ -9,10 +9,14 @@
     <h1>image search engine</h1>
     <form action="#" id="search-from">
 
-        <input type="text" id="srearch-box" placeholder="Search anything here...">
+        <input type="text" id="srearch-box" placeholder ="Search anything here...">
         <button> Search </button>
 
     </form>
+    <div id="search-result">
+
+    </div>
+    <button id="show-more-btn">Show more</button>
     <script src="script.js"></script>
 </body>
 </html>
